Bug 83574 - [llvmpipe] [softpipe] piglit arb_explicit_uniform_location-use-of-unused-loc regression
Summary: [llvmpipe] [softpipe] piglit arb_explicit_uniform_location-use-of-unused-loc ...
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Mesa core (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Tapani Pälli
QA Contact:
URL:
Whiteboard:
Keywords: bisected, have-backtrace, regression
: 83648 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-09-06 21:36 UTC by Vinson Lee
Modified: 2016-07-09 00:10 UTC (History)
3 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Vinson Lee 2014-09-06 21:36:14 UTC
mesa: dc0bd799cabdd974b05bd217304944392169fb50 (master 10.4.0-devel)

$ ./bin/arb_explicit_uniform_location-use-of-unused-loc -auto
Segmentation fault (core dumped)

(gdb) bt
#0  validate_uniform_parameters (ctx=0x7f9e53f46010, shProg=0x1def900, location=0, count=1, array_index=0x7fff84c82c7c, 
    caller=0x7f9e4e6c8e46 "glUniform", negative_one_is_not_valid=false) at ../../src/mesa/main/uniform_query.cpp:272
#1  0x00007f9e4e48b089 in _mesa_uniform (ctx=0x7f9e53f46010, shProg=0x1def900, location=0, count=count@entry=1, 
    values=values@entry=0x7fff84c82ccc, type=type@entry=5124) at ../../src/mesa/main/uniform_query.cpp:618
#2  0x00007f9e4e487bc9 in _mesa_Uniform1i (location=<optimized out>, v0=1) at ../../src/mesa/main/uniforms.c:181
#3  0x00007f9e53a952e9 in stub_glUniform1i (location=0, v0=1) at piglit/tests/util/piglit-dispatch-gen.c:52781
#4  0x0000000000400d2f in piglit_init (argc=1, argv=0x7fff84c82ee8)
    at piglit/tests/spec/arb_explicit_uniform_location/use-of-unused-loc.c:69
#5  0x00007f9e53ad731f in run_test (gl_fw=0x7f9e53d490c0 <glut_fw>, argc=1, argv=0x7fff84c82ee8)
    at piglit/tests/util/piglit-framework-gl/piglit_glut_framework.c:165
#6  0x00007f9e53abdfd0 in piglit_gl_test_run (argc=1, argv=0x7fff84c82ee8, config=0x7fff84c82db0)
    at piglit/tests/util/piglit-framework-gl.c:151
#7  0x0000000000400cb5 in main (argc=1, argv=0x7fff84c82ee8)
    at piglit/tests/spec/arb_explicit_uniform_location/use-of-unused-loc.c:36
(gdb) frame 0
#0  validate_uniform_parameters (ctx=0x7f9e53f46010, shProg=0x1def900, location=0, count=1, array_index=0x7fff84c82c7c, 
    caller=0x7f9e4e6c8e46 "glUniform", negative_one_is_not_valid=false) at ../../src/mesa/main/uniform_query.cpp:272
272	   if (uni->array_elements == 0 && count > 1) {
(gdb) print uni
$1 = (gl_uniform_storage * const) 0x0
Comment 1 Vinson Lee 2014-09-06 21:54:26 UTC
f3750a2c8667961c0595f5813b15be1476d13079 is the first bad commit
commit f3750a2c8667961c0595f5813b15be1476d13079
Author: Tapani Pälli <tapani.palli@intel.com>
Date:   Wed Mar 5 09:39:10 2014 +0200

    Enable GL_ARB_explicit_uniform_location in the drivers.
    
    v2: enable also for i915 (Ian)
    
    Signed-off-by: Tapani Pälli <tapani.palli@intel.com>
    Reviewed-by: Petri Latvala <petri.latvala@intel.com>

:040000 040000 e81aecf5c8d36e94aff61ee8e39c761360e0ba49 05d5f4fddd040d1b3093bbcc4ec75db531ff09fb M	src
bisect run success
Comment 2 Tapani Pälli 2014-09-07 05:09:35 UTC
fix available for review here:

http://lists.freedesktop.org/archives/mesa-dev/2014-August/066752.html
Comment 3 Tapani Pälli 2014-09-12 07:32:31 UTC
*** Bug 83648 has been marked as a duplicate of this bug. ***
Comment 4 Tapani Pälli 2014-09-15 04:36:11 UTC
pushed to master


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.